# Embedded-CNN-Libtorch

./: README.md
lib/ArduCAM/: memorysaver.h
lib/ArduCAM/examples/mini/ArduCAM_Mini_2MP_OV2640_functions/: ArduCAM_Mini_2MP_OV2640_functions.cpp
src/: ArduCAM_Mini_2MP_OV2640_functions.cpp
torch_project/: CMakeLists.txt
